--- a/app.html
+++ b/app.html
@@ -5,54 +5,64 @@
             margin: 0 auto;
             background-color: black;
         }
-        input { 
-			width: 285px;
-			margin: 8px auto;
-			border: 0;
-			padding: 4px;
-			margin-left: 16px;
-			outline: none;
-			border-bottom: 2px solid #333;
-			color: #333;
-			font-weight: bold;
+        input {
+            width: 285px;
+            margin: 8px auto;
+            border: 0;
+            padding: 4px;
+            margin-left: 16px;
+            outline: none;
+            border-bottom: 2px solid #333;
+            color: #333;
+            font-weight: bold;
         }
-		:disabled {
-			opacity: .5;
-			background-color: transparent;
-		}
+        :disabled {
+            opacity: .5;
+            background-color: transparent;
+        }
         ul {
             list-style: none;
             margin: 0 auto;
         }
         li {
             padding-bottom: 8px;
-        }        
-		::-webkit-scrollbar {									
-			width: 14px;
-			height: 14px;
-			background: transparent;
-		}
-		::-webkit-scrollbar-track-piece {						
-			background: transparent none;
-			border: solid 2px transparent;
-			border-right-width: 8px;
-			margin: 4px;
-		}
-		::-webkit-scrollbar-thumb {								
-			border: solid 0 transparent;
-			border-right-width: 4px;
-			-webkit-border-radius: 5px;
-			-webkit-border-top-right-radius: 9px 5px;
-			-webkit-border-bottom-right-radius: 9px 5px;
-			-webkit-box-shadow: inset 0 0 0 1px rgb(79,79,79), inset 0 0 0 6px rgb(102,102,102);
-		}      
+        }
+        ::-webkit-scrollbar {
+            width: 14px;
+            height: 14px;
+            background: transparent;
+        }
+        ::-webkit-scrollbar-track-piece {
+            background: transparent none;
+            border: solid 2px transparent;
+            border-right-width: 8px;
+            margin: 4px;
+        }
+        ::-webkit-scrollbar-thumb {
+            border: solid 0 transparent;
+            border-right-width: 4px;
+            -webkit-border-radius: 5px;
+            -webkit-border-top-right-radius: 9px 5px;
+            -webkit-border-bottom-right-radius: 9px 5px;
+            -webkit-box-shadow: inset 0 0 0 1px rgb(79,79,79), inset 0 0 0 6px rgb(102,102,102);
+        }
         .thumbnail {
             width: 61.80%;
-            height: 100%; 
+            height: 100%;
             background-size: contain;
             background-repeat: no-repeat;
             background-position: 50% 50%;
-			cursor: pointer;
+            cursor: pointer;
+        }
+        .empty {
+            background-image: url('icons/128.png');
+            background-size: 96px;
+            opacity: .2;
+            transition: .2s all ease-in-out;
+        }
+        .empty:hover {
+            background-size: 128px;
+            opacity: .6;
         }
         .details {
             position: fixed;
@@ -61,9 +71,9 @@
             height: 100%;
             width: 315px;
             background-color: #FFF;
-            overflow-y: scroll;          
+            overflow-y: scroll;
         }
-        .exif { 
+        .exif {
             margin-top: 8px;
             padding: 0 16px;
         }
@@ -81,11 +91,11 @@
         .tag-description {
             background: #1ED2FF;
             border-radius: 0 4px 4px 0;
-        }        
+        }
     </style>
 </head>
 <body>
-    <div class="thumbnail"></div>
+    <div class="thumbnail empty"></div>
     <div class="details">
         <input type="search" placeholder="Filter..." disabled/>
         <ul class="exif"></ul>
