--- a/app.html
+++ b/app.html
@@ -47,7 +47,7 @@
             -webkit-box-shadow: inset 0 0 0 1px rgb(79,79,79), inset 0 0 0 6px rgb(102,102,102);
         }
         .thumbnail {
-            width: 61.80%;
+            margin-right: 315px;
             height: 100%;
             background-size: contain;
             background-repeat: no-repeat;
